baml_language/crates/baml_tests/snapshots/diagnostic_errors/anyfunction/baml_tests__diagnostic_errors__anyfunction__02_parser__anyfunction.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  CLASS_DEF
    KW_CLASS "class"
    WORD "MyTool"
    L_BRACE "{"
    FIELD
      WORD "name"
      TYPE_EXPR "string"
        WORD "string"
    R_BRACE "}"
  IMPLEMENTS_FOR
    KW_IMPLEMENTS "implements"
    IMPLEMENTS_TARGET
      TYPE_EXPR "baml.AnyFunction"
        WORD "baml"
        DOT "."
        WORD "AnyFunction"
    KW_FOR "for"
    IMPLEMENTS_FOR_TARGET
      TYPE_EXPR "MyTool"
        WORD "MyTool"
    L_BRACE "{"
    R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "pick"
    GENERIC_PARAM_LIST
      LESS "<"
      GENERIC_PARAM
        WORD "T"
        GENERIC_PARAM_BOUNDS
          KW_EXTENDS "extends"
          TYPE_EXPR "baml.AnyFunction"
            WORD "baml"
            DOT "."
            WORD "AnyFunction"
      GREATER ">"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "f"
        COLON ":"
        TYPE_EXPR "T"
          WORD "T"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "T"
      WORD "T"
    THROWS_CLAUSE
      KW_THROWS "throws"
      TYPE_EXPR "never"
        WORD "never"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        RETURN_STMT "return f"
          KW_RETURN "return"
          WORD "f"
        R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "Holder"
    GENERIC_PARAM_LIST
      LESS "<"
      GENERIC_PARAM
        WORD "T"
        GENERIC_PARAM_BOUNDS
          KW_EXTENDS "extends"
          TYPE_EXPR "baml.AnyFunction"
            WORD "baml"
            DOT "."
            WORD "AnyFunction"
      GREATER ">"
    L_BRACE "{"
    FIELD
      WORD "f"
      TYPE_EXPR "T"
        WORD "T"
    R_BRACE "}"
  INTERFACE_DEF
    KW_INTERFACE "interface"
    WORD "Registry"
    L_BRACE "{"
    ASSOCIATED_TYPE_DECL
      KW_TYPE "type"
      WORD "Callee"
      KW_EXTENDS "extends"
      TYPE_EXPR "baml.AnyFunction"
        WORD "baml"
        DOT "."
        WORD "AnyFunction"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "ToolError"
    L_BRACE "{"
    FIELD
      WORD "message"
      TYPE_EXPR "string"
        WORD "string"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "Doc"
    L_BRACE "{"
    FIELD
      WORD "title"
      TYPE_EXPR "string"
        WORD "string"
    R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "web_search"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "q"
        COLON ":"
        TYPE_EXPR "string"
          WORD "string"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "Doc[]"
      WORD "Doc"
      L_BRACKET "["
      R_BRACKET "]"
    THROWS_CLAUSE
      KW_THROWS "throws"
      TYPE_EXPR "ToolError"
        WORD "ToolError"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        IF_EXPR
          KW_IF "if"
          BINARY_EXPR
            WORD "q"
            EQUALS_EQUALS "=="
            STRING_LITERAL "boom"
              QUOTE """
              WORD "boom"
              QUOTE """
          BLOCK_EXPR
            L_BRACE "{"
            THROW_STMT
              THROW_EXPR
                KW_THROW "throw"
                OBJECT_LITERAL
                  WORD "ToolError"
                  L_BRACE "{"
                  OBJECT_FIELD
                    WORD "message"
                    COLON ":"
                    STRING_LITERAL "no results"
                      QUOTE """
                      WORD "no"
                      WORD "results"
                      QUOTE """
                  R_BRACE "}"
            R_BRACE "}"
        RETURN_STMT
          KW_RETURN "return"
          ARRAY_LITERAL
            L_BRACKET "["
            OBJECT_LITERAL
              WORD "Doc"
              L_BRACE "{"
              OBJECT_FIELD "title: q"
                WORD "title"
                COLON ":"
                WORD "q"
              R_BRACE "}"
            R_BRACKET "]"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "main"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    THROWS_CLAUSE
      KW_THROWS "throws"
      TYPE_EXPR "never"
        WORD "never"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          PATTERN
            BINDING_PATTERN
              KW_LET "let"
              WORD "bad_ret"
              COLON ":"
              PATTERN
                TYPE_PATTERN
                  TYPE_EXPR
                    WORD "baml"
                    DOT "."
                    WORD "AnyFunction"
                    TYPE_ARGS
                      LESS "<"
                      ASSOCIATED_TYPE_DECL
                        WORD "Returns"
                        EQUALS "="
                        TYPE_EXPR "string"
                          WORD "string"
                      GREATER ">"
          EQUALS "="
          WORD "web_search"
        LET_STMT
          PATTERN
            BINDING_PATTERN
              KW_LET "let"
              WORD "bad_throws"
              COLON ":"
              PATTERN
                TYPE_PATTERN
                  TYPE_EXPR
                    WORD "baml"
                    DOT "."
                    WORD "AnyFunction"
                    TYPE_ARGS
                      LESS "<"
                      ASSOCIATED_TYPE_DECL
                        WORD "Throws"
                        EQUALS "="
                        TYPE_EXPR "never"
                          WORD "never"
                      GREATER ">"
          EQUALS "="
          WORD "web_search"
        LET_STMT
          PATTERN
            BINDING_PATTERN
              KW_LET "let"
              WORD "not_a_fn"
              COLON ":"
              PATTERN
                TYPE_PATTERN
                  TYPE_EXPR "baml.AnyFunction"
                    WORD "baml"
                    DOT "."
                    WORD "AnyFunction"
          EQUALS "="
          INTEGER_LITERAL "42"
        LET_STMT
          PATTERN
            BINDING_PATTERN
              KW_LET "let"
              WORD "narrow"
              COLON ":"
              PATTERN
                TYPE_PATTERN
                  TYPE_EXPR
                    WORD "baml"
                    DOT "."
                    WORD "AnyFunction"
                    TYPE_ARGS
                      LESS "<"
                      ASSOCIATED_TYPE_DECL
                        WORD "Returns"
                        EQUALS "="
                        TYPE_EXPR "Doc[]"
                          WORD "Doc"
                          L_BRACKET "["
                          R_BRACKET "]"
                      GREATER ">"
          EQUALS "="
          WORD "web_search"
        LET_STMT
          PATTERN
            BINDING_PATTERN
              KW_LET "let"
              WORD "bad_widen"
              COLON ":"
              PATTERN
                TYPE_PATTERN
                  TYPE_EXPR
                    WORD "baml"
                    DOT "."
                    WORD "AnyFunction"
                    TYPE_ARGS
                      LESS "<"
                      ASSOCIATED_TYPE_DECL
                        WORD "Returns"
                        EQUALS "="
                        TYPE_EXPR "string"
                          WORD "string"
                      GREATER ">"
          EQUALS "="
          WORD "narrow"
        RETURN_STMT "return 0"
          KW_RETURN "return"
          INTEGER_LITERAL "0"
        R_BRACE "}"

=== ERRORS ===
None
