baml_language/crates/baml_tests/snapshots/diagnostic_errors/anyfunction/baml_tests__diagnostic_errors__anyfunction__02_parser__bans.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  CLASS_DEF
    KW_CLASS "class"
    WORD "MyTool"
    L_BRACE "{"
    FIELD
      WORD "name"
      TYPE_EXPR "string"
        WORD "string"
    R_BRACE "}"
  IMPLEMENTS_FOR
    KW_IMPLEMENTS "implements"
    IMPLEMENTS_TARGET
      TYPE_EXPR "baml.AnyFunction"
        WORD "baml"
        DOT "."
        WORD "AnyFunction"
    KW_FOR "for"
    IMPLEMENTS_FOR_TARGET
      TYPE_EXPR "MyTool"
        WORD "MyTool"
    L_BRACE "{"
    R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "pick"
    GENERIC_PARAM_LIST
      LESS "<"
      GENERIC_PARAM
        WORD "T"
        GENERIC_PARAM_BOUNDS
          KW_EXTENDS "extends"
          TYPE_EXPR "baml.AnyFunction"
            WORD "baml"
            DOT "."
            WORD "AnyFunction"
      GREATER ">"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "f"
        COLON ":"
        TYPE_EXPR "T"
          WORD "T"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "T"
      WORD "T"
    THROWS_CLAUSE
      KW_THROWS "throws"
      TYPE_EXPR "never"
        WORD "never"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        RETURN_STMT "return f"
          KW_RETURN "return"
          WORD "f"
        R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "Holder"
    GENERIC_PARAM_LIST
      LESS "<"
      GENERIC_PARAM
        WORD "T"
        GENERIC_PARAM_BOUNDS
          KW_EXTENDS "extends"
          TYPE_EXPR "baml.AnyFunction"
            WORD "baml"
            DOT "."
            WORD "AnyFunction"
      GREATER ">"
    L_BRACE "{"
    FIELD
      WORD "f"
      TYPE_EXPR "T"
        WORD "T"
    R_BRACE "}"
  INTERFACE_DEF
    KW_INTERFACE "interface"
    WORD "Registry"
    L_BRACE "{"
    ASSOCIATED_TYPE_DECL
      KW_TYPE "type"
      WORD "Callee"
      KW_EXTENDS "extends"
      TYPE_EXPR "baml.AnyFunction"
        WORD "baml"
        DOT "."
        WORD "AnyFunction"
    R_BRACE "}"

=== ERRORS ===
None
